@@ -1,3 +1,8 @@
+2004-08-31 nalin
+	* src/password.c(pam_sm_chauthtok): during the preliminary check phase,
+	read the current password as the PAM_OLDAUTHTOK item, not PAM_AUTHTOK
+	(Ludek Finstrle, #131246)
+
 2004-08-27 nalin
 	* src/userinfo.c(_pam_krb5_user_info_init): override the realm name to
 	be the one which was passed in (#116198).
